html syntax fix in docs

--- a/playground/people/edo888/help/en-GB/screen.wcp.applypatch.html
+++ b/playground/people/edo888/help/en-GB/screen.wcp.applypatch.html
@@ -21,7 +21,7 @@
                 
                 <h2><span class="mw-headline">Form</span></h2>
                 <ul>
-                    <li><p><b>Patch File</b>. You need to specify the patch file and click Upload File and Patch button.</li>
+                    <li><b>Patch File</b>. You need to specify the patch file and click Upload File and Patch button.</li>
                 </ul>
 
                 <h2><span class="mw-headline">Toolbar</span></h2>
